<resources>
    <string name="app_name">Lost Dog</string>

    <string name="register">Аутентификация</string>
    <string name="register_enter_code">Вход по СМС</string>
    <string name="register_image_content_description">Картинка регистрации</string>
    <string name="register_label_phone">Введите номер мобильного телефона мы отправим на него одноразовый код в СМС</string>
    <string name="register_get_code">Получить код</string>
    <string name="register_enter_verify_code">Введите одноразовый код из СМС</string>

    <string name="profile_default_user_name">Anton Fedorov</string>
    <string name="profile_text_account">Аккаунт</string>
    <string name="profile_default_number_phone">+79273233621</string>
    <string name="profile_label_phone_number">Нажмите чтобы изменить номер телефона</string>
    <string name="profile_default_login">freelomen</string>
    <string name="profile_label_login">Нажмите чтобы изменить логин</string>
    <string name="profile_default_bio">О себе</string>
    <string name="profile_label_bio">Напишите немного о себе</string>
    <string name="profile_menu_label_edit_username">Изменить имя</string>
    <string name="profile_menu_label_exit">Выход</string>
    <string name="registerHintDefault">- - - - - -</string>
    <string name="register_hint_phone">+79996661122</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_input_hint_name">Имя</string>
    <string name="profile_input_hint_surname">Фамилия</string>
    <string name="profile_input_hint_username">Короткое имя пользователя</string>
    <string name="profile_input_hint_bio">О себе</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="profile_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="home_fragment_title">Главная</string>
    <string name="profile_fragment_title">Профиль</string>
    <string name="user_post_fragment_title">Мои посты</string>
    <string name="new_post_fragment_title">Создать пост</string>
    <string name="new_post_label_title">Заголовок</string>
    <string name="new_post_input_title_hint">Пропала собака</string>
    <string name="new_post_label_description">Описание</string>
    <string name="new_post_input_description_hint">Черный окрас, низкая</string>
    <string name="new_post_label_photo">Фото</string>
    <string name="new_post_input_title_empty">Заголовок не может быть пустым</string>
    <string name="new_post_input_description_empty">Описание не может быть пустым</string>
    <string name="new_post_photo_fragment_title">Добавить фото</string>
    <string name="new_post_photo_add">Фото добавлено</string>
    <string name="new_post_add">Запись добавленна</string>
    <string name="toolbar_info_title">Заголовок</string>
    <string name="single_post_description">Белая собачка, красный ошейник и т.л. и т.д. ...</string>
    <string name="single_post_menu_delete">Удалить</string>
    <string name="single_post_menu_edit">Изменить</string>
    <string name="edit_single_post_fragment_title">Изменить пост</string>
    <string name="edit_single_post_label_title">Заголовок</string>
    <string name="edit_single_post_input_title_hint">Пропала собака</string>
    <string name="edit_single_post_label_description">Описание</string>
    <string name="edit_single_post_input_description_hint">Окрас черный, белый ошейник</string>
    <string name="edit_single_post_label_photo">Фото</string>
    <string name="edit_single_post_fragment_photo_update">Фото обновлено</string>
    <string name="edit_single_post_fragment_post_update">Пост изменен</string>
    <string name="single_post_delete">Пост удален</string>
</resources>