<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterPhoneNumberFragment">

    <TextView
        android:id="@+id/register_label_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_enter_code"
        android:textSize="@dimen/largeText"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/vertical_margin"/>

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="@dimen/register_image_width"
        android:layout_height="@dimen/register_image_height"
        android:layout_marginTop="@dimen/vertical_margin"
        android:src="@drawable/sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_label_sms"
        android:contentDescription="@string/register_image_content_description" />

    <TextView
        android:id="@+id/register_label_phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/register_label_phone"
        style="@style/smallText"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image" />

    <EditText
        android:id="@+id/register_input_phone_number"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_label_phone"
        style="@style/editText"
        android:hint="@string/register_hint_phone"
        android:autofillHints="" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/register_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/register_get_code" />

</androidx.constraintlayout.widget.ConstraintLayout>