<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterVerifyCodeFragment">

    <TextView
        android:id="@+id/register_label_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_enter_code"
        android:textSize="@dimen/largeText"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/vertical_margin"/>

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="@dimen/register_image_width"
        android:layout_height="@dimen/register_image_height"
        android:layout_marginTop="@dimen/vertical_margin"
        android:src="@drawable/sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_label_sms"
        android:contentDescription="@string/register_image_content_description" />

    <TextView
        android:id="@+id/register_label_code"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:text="@string/register_enter_verify_code"
        style="@style/smallText"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image" />

    <EditText
        android:id="@+id/enter_input_verify_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="6"
        android:hint="@string/registerHintDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_label_code"
        style="@style/editText"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>