<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_header_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_user_photo"
            android:layout_width="@dimen/profile_user_photo_width"
            android:layout_height="@dimen/profile_user_photo_height"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:src="@drawable/default_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="@string/profile_default_user_name"
            android:textSize="@dimen/largeText"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/profile_user_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_user_photo"
            app:layout_constraintTop_toTopOf="@+id/profile_user_photo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/profile_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:text="@string/profile_text_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/normalText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_header_block" />

    <View
        android:id="@+id/profile_separator"
        app:layout_constraintTop_toBottomOf="@id/profile_text_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/separator" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_button_edit_phone_number"
        app:layout_constraintTop_toBottomOf="@id/profile_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/profileButtons">

        <TextView
            android:id="@+id/profile_user_phone_number"
            android:text="@string/profile_default_number_phone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/profile_label_phone_number"
            android:text="@string/profile_label_phone_number"
            app:layout_constraintTop_toBottomOf="@id/profile_user_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/profile_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_button_edit_login"
        app:layout_constraintTop_toBottomOf="@id/profile_button_edit_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/profileButtons">

        <TextView
            android:id="@+id/profile_user_login"
            android:text="@string/profile_default_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/profile_label_login"
            android:text="@string/profile_label_login"
            app:layout_constraintTop_toBottomOf="@id/profile_user_login"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/profile_label_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_button_edit_bio"
        app:layout_constraintTop_toBottomOf="@id/profile_button_edit_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/profileButtons">

        <TextView
            android:id="@+id/profile_user_bio"
            android:text="@string/profile_default_bio"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />

        <TextView
            android:id="@+id/profile_label_bio"
            android:text="@string/profile_label_bio"
            app:layout_constraintTop_toBottomOf="@id/profile_user_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/profile_label_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_edit_user_photo"
        android:layout_width="@dimen/profile_edit_user_photo_width"
        android:layout_height="@dimen/profile_edit_user_photo_height"
        android:src="@drawable/ic_camera"
        android:layout_marginEnd="@dimen/horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@+id/profile_header_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_header_block"
        app:civ_circle_background_color="@color/colorAccent"
        app:civ_border_width="@dimen/civ_border_width"
        app:civ_border_color="@color/colorGrey"/>

</androidx.constraintlayout.widget.ConstraintLayout>